Translate 2021-09-01-using-lra.adoc.po

--- a/l10n/po/ja_JP/_posts/2021-09-01-using-lra.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-09-01-using-lra.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-09-01 07:09+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-09-09 11:45+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: An Extension for Long Running Activities\n"
@@ -35,66 +35,60 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 長時間の活動のための拡張機能\n"
+"title: Long Running Activitiesのためのエクステンション\n"
 "date: 2021-09-01\n"
 "tags: extensions\n"
-"synopsis: narayana LRAエクステンションを使用して、信頼性の高いロングランニングアクティビティを作成する方法。\n"
+"synopsis: narayana LRAエクステンションを使用して、信頼性の高い長時間実行アクティビティを作成する方法。\n"
 "author: mmusgrov\n"
 "---\n"
 
 #. type: Title ==
 #: upstream/_posts/2021-09-01-using-lra.adoc:10
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Introduction"
 msgstr "はじめに"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:14
-#, fuzzy
 msgid "The Quarkus LRA extension is useful for building JAX-RS services that wish to definitively agree when an interaction has finished, with either a successful outcome or an unsuccessful one.  In the successful case, all participants can clean up in the knowledge that all other services will do so as well. Conversely, in the unsuccessful case, participants know that each other will compensate for any actions performed during the interaction. This feature means that participating services can reach a consensus and achieve an atomic outcome."
-msgstr "QuarkusのLRA拡張機能は、対話が終了したときに、成功した場合と失敗した場合のいずれかで確定的に合意したいと考えているJAX-RSサービスを構築する際に便利です。成功したケースでは、すべての参加者は、他のすべてのサービスが同様に行うことを認識して、片付けることができます。逆に、失敗した場合は、参加者は相互作用中に行われた行為をお互いに補償することを知っている。この機能は、参加したサービスがコンセンサスを得て、アトミックな結果を得ることができることを意味します。"
+msgstr "QuarkusのLRAエクステンションは、対話が終了したときに、成功した場合と失敗した場合のいずれかで確定的に合意したいと考えているJAX-RSサービスを構築する際に便利です。成功した場合は、すべての参加者は、他のすべてのサービスが同様に行うことを認識して、クリーンアップすることができます。逆に、失敗した場合は、参加者はインタラクション中に行われた行為をお互いに補償することを知っている。この機能は、参加したサービスがコンセンサスを得て、アトミックな結果を得ることができることを意味します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:16
-#, fuzzy
 msgid "We call the service interaction an LRA, short for Long Running Action. An LRA has specific properties and guarantees that aid in the construction of reliable service interactions. Each action is assigned a unique identifier (referred to as the LRA context) so that it can be distinguished from other LRAs."
 msgstr "このサービスインタラクションをLRA（Long Running Actionの略）と呼んでいます。LRAは、信頼性の高いサービスインタラクションを構築するための特定の特性と保証を持っています。各アクションには一意の識別子（LRAコンテキスト）が割り当てられ、他のLRAと区別できるようになっています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:18
-#, fuzzy
 msgid "Services start an LRA (or join an existing one) by marking a JAX-RS method with an https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/org/eclipse/microprofile/lra/annotation/ws/rs/LRA.html[@LRA annotation]. When such a method is invoked the system will start the action and make its identifier available as a JAX-RS header called \"Long-Running-Action\". If the body of the method performs any JAX-RS invocations the header is automatically added to outgoing requests. In this way the target services can join in with the interaction (if they are also annotated with the `@LRA` annotation)."
-msgstr "サービスは、JAX-RSメソッドを link:https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/org/eclipse/microprofile/lra/annotation/ws/rs/LRA.html[@LRAアノテーション]でマークすることで、LRAを開始（または既存のものに参加）します。このようなメソッドが呼び出されると、システムはアクションを開始し、その識別子を「Long-Running-Action」というJAX-RSヘッダーとして利用可能にします。メソッドのボディが何らかのJAX-RSの呼び出しを実行すると、このヘッダーは自動的に送信リクエストに追加されます。このようにして、対象となるサービスは、（ `@LRA` ）アノテーションが付与されていれば、対話に参加することができます。"
+msgstr "サービスは、JAX-RSメソッドを link:https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/org/eclipse/microprofile/lra/annotation/ws/rs/LRA.html[@LRAアノテーション]でマークすることで、LRAを開始（または既存のものに参加）します。このようなメソッドが呼び出されると、システムはアクションを開始し、その識別子を\"Long-Running-Action\"というJAX-RSヘッダーとして利用可能にします。メソッドのボディが何らかのJAX-RSの呼び出しを実行すると、このヘッダーは自動的に送信リクエストに追加されます。このようにして、対象となるサービスは、（ `@LRA` ）アノテーションが付与されていれば、対話に参加することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:20
-#, fuzzy
 msgid "Any work performed by a method annotated in this way should be \"compensatable\" in the sense that if some service \"cancels\" the LRA then the service will be reliably notified that it should compensate for any work that it did. Each service is responsible for interpreting the notion of what it means to compensate, the only requirement is that it responds https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/org/eclipse/microprofile/lra/annotation/ParticipantStatus.html[appropriately] when it is notified that it should compensate. The service indicates how it should be notified by annotating one of its method with an https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/org/eclipse/microprofile/lra/annotation/Compensate.html[@Compensate] annotation. Refer to the javadoc for the `@LRA` annotation for the details of how to control the outcome of an LRA."
 msgstr "このようにアノテーションされたメソッドが行った作業は、あるサービスがLRAを「キャンセル」した場合に、そのサービスが行った作業を補償すべきであると確実に通知されるという意味で、「補償可能」でなければなりません。各サービスは、「補償する」という概念を解釈する責任があります。唯一の要件は、補償すべきだと通知されたときに link:https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/org/eclipse/microprofile/lra/annotation/ParticipantStatus.html[適切に]対応することです。サービスは、メソッドの1つに link:https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/org/eclipse/microprofile/lra/annotation/Compensate.html[@Compensate]アノテーションを付けることで、どのように通知されるべきかを示します。LRAの結果を制御する方法の詳細については、 `@LRA` アノテーションのjavadocを参照してください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:23
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "The extension provides an implementation of the https://download.eclipse.org/microprofile/microprofile-lra-1.0-M1/microprofile-lra-spec.html[MicroProfile LRA specification] and its associated\n"
 " https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/index.html?org/eclipse/microprofile/lra/annotation/ws/rs/LRA.html[annotations].\n"
-msgstr "このエクステンションは、 link:https://download.eclipse.org/microprofile/microprofile-lra-1.0-M1/microprofile-lra-spec.html[MicroProfile LRA仕様]とその関連 link:https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/index.html?org/eclipse/microprofile/lra/annotation/ws/rs/LRA.html[アノテーション]の実装を提供します。"
+msgstr "このエクステンションは、 link:https://download.eclipse.org/microprofile/microprofile-lra-1.0-M1/microprofile-lra-spec.html[MicroProfile LRA仕様]とその関連 link:https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/index.html?org/eclipse/microprofile/lra/annotation/ws/rs/LRA.html[アノテーション]の実装を提供します。\n"
 
 #. type: Title ==
 #: upstream/_posts/2021-09-01-using-lra.adoc:24
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "LRA coordinators"
 msgstr "LRAコーディネーター"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:29
-#, fuzzy
 msgid "The `narayana-lra` extension requires the presence of a running coordinator in the environment. Coordinators can be obtained from `https://hub.docker.com/r/jbosstm/lra-coordinator` or you can build your own coordinator using a maven pom that includes the appropriate dependencies. For the purpose of this blog we'll show how to create one from scratch using the `quarkus-maven-plugin`.  There is some extra information about configuring the coordinator in one of the https://jbossts.blogspot.com/2021/07/narayana-lra-update.html[narayana blogs]."
-msgstr "`narayana-lra` 拡張機能を利用するには、環境内に実行中のコーディネーターが存在することが必要です。コーディネーターは、以下のサイトから入手できます。 `&lt;a href=\"https://hub.docker.com/r/jbosstm/lra-coordinator\" class=\"bare\"&gt;https://hub.docker.com/r/jbosstm/lra-coordinator&lt;/a&gt;`また、適切な依存関係を含むmaven pomを使用して、独自のコーディネーターを構築することもできます。このブログでは、 `quarkus-maven-plugin` を使用してゼロからコーディネーターを作成する方法を紹介します。コーディネーターの設定については、 link:https://jbossts.blogspot.com/2021/07/narayana-lra-update.html[narayana]氏のブログでも紹介されています。"
+msgstr "`narayana-lra` エクステンションを利用するには、環境内に実行中のコーディネーターが存在することが必要です。コーディネーターは、以下のサイトから入手できます。 `https://hub.docker.com/r/jbosstm/lra-coordinator`また、適切な依存関係を含むmaven pomを使用して、独自のコーディネーターをビルドすることもできます。このブログでは、 `quarkus-maven-plugin` を使用してゼロからコーディネーターを作成する方法を紹介します。コーディネーターの設定については、 link:https://jbossts.blogspot.com/2021/07/narayana-lra-update.html[narayana]氏のブログでも紹介されています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:31
-#, fuzzy
 msgid "Since the coordinator is just a JAX-RS resource we can build one using quarkus, adding the `resteasy-jackson` and `rest-client` extensions:"
 msgstr "コーディネーターは単なるJAX-RSリソースなので、Quarkusを使って、 `resteasy-jackson` と `rest-client` のエクステンションを追加して構築することができます。"
 
@@ -112,13 +106,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:43
-#, fuzzy
 msgid "Note that we removed the generated src directory because we just need the quarkus framework for running the coordinator."
 msgstr "生成されたsrcディレクトリを削除したのは、コーディネーターを動かすためにquarkusフレームワークが必要なだけだからです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:45
-#, fuzzy
 msgid "Update the pom.xml file to add a dependency on the narayana coordinator implementation:"
 msgstr "pom.xmlファイルを更新して、narayanaコーディネーターの実装への依存関係を追加します。"
 
@@ -136,7 +128,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:56
-#, fuzzy
 msgid "Now build it and run it in the background:"
 msgstr "今度はそれをビルドして、バックグラウンドで実行します。"
 
@@ -150,9 +141,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:65
-#, fuzzy
 msgid "Here we are running the coordinator on the default port used by the `narayana-lra` quarkus extension, namely `50000`.  You can verify that the coordinator is running okay by listing the current LRAs:"
-msgstr "ここでは、 `narayana-lra` quarkus extensionが使用するデフォルトのポート、すなわち `50000` でコーディネーターを実行しています。コーディネーターが正常に動作していることは、現在のLRAをリストアップすることで確認できます。"
+msgstr "ここでは、 `narayana-lra` quarkus エクステンションが使用するデフォルトのポート、すなわち `50000` でコーディネーターを実行しています。コーディネーターが正常に動作していることは、現在のLRAをリストアップすることで確認できます。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-09-01-using-lra.adoc:70
@@ -164,19 +154,17 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:73
-#, fuzzy
 msgid "This snippet shows the request returning an empty json array."
 msgstr "このスニペットは、リクエストが空のjson配列を返すことを示しています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:77
-#, fuzzy
 msgid "We shall leave the coordinator running (on the default port) while we develop and test services that use LRAs.  Towards the end of article we will show how to embed coordinators with services (NOTE: you cannot use this approach to run coordinators in native mode, a future extension will be provided to support this requirement)."
-msgstr "ここでは、LRAを使用するサービスを開発・テストする間、コーディネーターを（デフォルトのポートで）稼働させておきます。記事の最後では、コーディネーターをサービスに組み込む方法を紹介します（注意：この方法では、コーディネーターをネイティブ・モードで実行することはできませんが、将来的にはこの要件をサポートする拡張機能が提供される予定です）。"
+msgstr "ここでは、LRAを使用するサービスを開発・テストする間、コーディネーターを（デフォルトのポートで）稼働させておきます。記事の最後では、コーディネーターをサービスに組み込む方法を紹介します（注意：この方法では、コーディネーターをネイティブ・モードで実行することはできませんが、将来的にはこの要件をサポートするエクステンションが提供される予定です）。"
 
 #. type: Title ==
 #: upstream/_posts/2021-09-01-using-lra.adoc:78
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "JVM mode"
 msgstr "JVMモード"
 
@@ -194,7 +182,7 @@ msgstr "上述のように、 link:https://download.eclipse.org/microprofile/mic
 
 #. type: Title ===
 #: upstream/_posts/2021-09-01-using-lra.adoc:84
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Step 1: Create the application:"
 msgstr "ステップ1：アプリケーションの作成"
 
@@ -211,7 +199,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:96
-#, fuzzy
 msgid "Note that if the coordinator is running on a port different from the default, i.e. `50000`, then you will need to update the application config file (`src/main/resources/application.properties`) and specify the host and port:"
 msgstr "なお、コーディネーターがデフォルトとは異なるポート（例： `50000` ）で動作している場合は、アプリケーションの設定ファイル（ `src/main/resources/application.properties` ）を更新し、ホストとポートを指定する必要があります。"
 
@@ -223,7 +210,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:103
-#, fuzzy
 msgid "Verify that the generated application still works after these changes:"
 msgstr "これらの変更後に、生成されたアプリケーションが動作することを確認します。"
 
@@ -235,25 +221,22 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_posts/2021-09-01-using-lra.adoc:109
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Step 2: Add LRA support"
 msgstr "ステップ2：LRAサポートの追加"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:112
-#, fuzzy
 msgid "Now update the generated application so that the hello method will execute in the context of a Long Running Action:"
 msgstr "ここで、生成されたアプリケーションを更新し、HelloメソッドがLong Running Actionのコンテキストで実行されるようにします。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:114
-#, fuzzy
 msgid "Open the file `src/main/java/org/acme/GreetingResource.java` in an editor and annotate the `hello` method with an @LRA annotation (also inject the LRA context into the method using the JAX-RS `javax.ws.rs.HeaderParam` annotation). In addition, add two callback methods which will be called when the LRA is closed or cancelled."
 msgstr "ファイル `src/main/java/org/acme/GreetingResource.java` をエディタで開き、 `hello` メソッドに @LRA アノテーションを付けます（また、JAX-RS `javax.ws.rs.HeaderParam` アノテーションを使用して、LRA コンテキストをメソッドに注入します）。さらに、LRAが閉じられたときやキャンセルされたときに呼び出される2つのコールバックメソッドを追加します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:116
-#, fuzzy
 msgid "The end result, including the imports, should look like the following:"
 msgstr "インポートも含めて最終的には以下のようになるはずです。"
 
@@ -340,7 +323,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:168
-#, fuzzy
 msgid "With these changes, if you build the application and then invoke the `hello` method then an LRA will be started before the method is entered and ended after it finishes:"
 msgstr "これらの変更により、アプリケーションを構築してから `hello` メソッドを呼び出すと、LRAはメソッドが入力される前に開始され、メソッドが終了した後に終了します。"
 
@@ -359,7 +341,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:181
-#, fuzzy
 msgid "Make sure that the coordinator is still running otherwise you will see an error message similar to the following:"
 msgstr "コーディネーターが動作していることを確認してください。そうでない場合は、以下のようなエラーメッセージが表示されます。"
 
@@ -371,25 +352,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:189
-#, fuzzy
 msgid "Notice the `System.out` messages indicating that the `@Complete` callback was invoked.  Now kill the java process in preparation for the next step (the process id was printed on the console, in my example the pid is 2389948, so I typed `kill 2389948`)."
 msgstr "`@Complete` のコールバックが呼び出されたことを示す `System.out` のメッセージに注目してください。ここで、次のステップに備えてjavaプロセスをkillします（プロセスIDがコンソールに表示され、私の例ではpidが2389948なので、 `kill 2389948` と入力しました）。"
 
 #. type: Title ===
 #: upstream/_posts/2021-09-01-using-lra.adoc:190
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Step 3: Extending the LRA across two service methods"
-msgstr "ステップ3：LRAを2つのサービス方式に拡張する"
+msgstr "ステップ3：LRAを2つのサービスメソッドに拡張する"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:193
-#, fuzzy
 msgid "In this step we will start an LRA but not end it when the method finishes by using https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/org/eclipse/microprofile/lra/annotation/ws/rs/LRA.html#end--[the end element of the LRA annotation]."
 msgstr "このステップでは、 link:https://download.eclipse.org/microprofile/microprofile-lra-1.0/apidocs/org/eclipse/microprofile/lra/annotation/ws/rs/LRA.html#end--[LRAアノテーションのend要素]を使用して、LRAを開始しますが、メソッドが終了しても終了しません。"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:195
-#, fuzzy
 msgid "Define a second business method to do this:"
 msgstr "そのための第二のビジネスメソッドを定義する。"
 
@@ -429,7 +407,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:221
-#, fuzzy
 msgid "Start an LRA using `curl` to send a request the new method we have just added:"
 msgstr "`curl` を使ってLRAを開始し、今回追加された新しい方法でリクエストを送信します。"
 
@@ -465,7 +442,7 @@ msgstr "`completeWork` メソッドが呼び出されたことに注目してく
 
 #. type: Title ===
 #: upstream/_posts/2021-09-01-using-lra.adoc:241
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Step 4: Start an LRA in one microservice and end it in a different microservice"
 msgstr "ステップ4：あるマイクロサービスでLRAを開始し、別のマイクロサービスで終了する"
 
@@ -528,15 +505,14 @@ msgstr "両方のマイクロサービスが、完了コールバックを受け
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:276
-#, fuzzy
 msgid "Terminate both java processes (`kill 2495275 2495369`)."
 msgstr "両方のJavaプロセスを終了させる( `kill 2495275 2495369`)。"
 
 #. type: Title ====
 #: upstream/_posts/2021-09-01-using-lra.adoc:277
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Optional Step: using the MANDATORY element"
-msgstr "オプショナルステップ：MANDATORY要素の使用"
+msgstr "オプションのステップ：MANDATORY要素の使用"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:281
@@ -817,15 +793,15 @@ msgstr "2つのサービスを停止してクリーンアップします( `kill 
 
 #. type: Title ==
 #: upstream/_posts/2021-09-01-using-lra.adoc:443
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Appendix 1"
 msgstr "付録1"
 
 #. type: Title ===
 #: upstream/_posts/2021-09-01-using-lra.adoc:445
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Embedded Coordinators"
-msgstr "エンベデッド・コーディネーター"
+msgstr "組込コーディネーター"
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:449
@@ -914,6 +890,5 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:506
-#, fuzzy
 msgid "A later extension will provide better support for embedded coordinators (including configuring them using standard quarkus mechanisms)."
-msgstr "後の拡張機能では、埋め込み式のコーディネーターのサポートが強化される予定です（標準的なQuarkusのメカニズムを使った設定を含む）。"
+msgstr "後者のエクステンションでは、埋め込み式のコーディネーターのサポートが強化される予定です（標準的なQuarkusのメカニズムを使った設定を含む）。"
