Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/kubernetes-config.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kubernetes-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-09-10 02:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -28,7 +28,9 @@ msgstr "Quarkus - Kubernetes Config"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kubernetes-config.adoc:12
-msgid "Quarkus includes the `kubernetes-config` extension which allows developers to use Kubernetes https://cloud.google.com/kubernetes-engine/docs/concepts/configmap[ConfigMaps] and https://cloud.google.com/kubernetes-engine/docs/concepts/secret[Secrets] as a configuration source, without having to mount them into the https://kubernetes.io/docs/concepts/workloads/pods/pod/[Pod] running the Quarkus application."
+#, fuzzy
+#| msgid "Quarkus includes the `kubernetes-config` extension which allows developers to use Kubernetes https://cloud.google.com/kubernetes-engine/docs/concepts/configmap[ConfigMaps] and https://cloud.google.com/kubernetes-engine/docs/concepts/secret[Secrets] as a configuration source, without having to mount them into the https://kubernetes.io/docs/concepts/workloads/pods/pod/[Pod] running the Quarkus application."
+msgid "Quarkus includes the `kubernetes-config` extension which allows developers to use Kubernetes https://cloud.google.com/kubernetes-engine/docs/concepts/configmap[ConfigMaps] and https://cloud.google.com/kubernetes-engine/docs/concepts/secret[Secrets] as a configuration source, without having to mount them into the https://kubernetes.io/docs/concepts/workloads/pods/pod/[Pod] running the Quarkus application or make any other modifications to their Kubernetes `Deployment` (or Openshift `DeploymentConfig`)."
 msgstr "Quarkusには、 `kubernetes-config` エクステンションが含まれており、開発者はQuarkusアプリケーションを実行している link:https://kubernetes.io/docs/concepts/workloads/pods/pod/[Pod] にマウントしなくても、Kubernetes link:https://cloud.google.com/kubernetes-engine/docs/concepts/configmap[ConfigMaps] と link:https://cloud.google.com/kubernetes-engine/docs/concepts/secret[Secrets] を設定ソースとして使用することができます。"
 
 #. type: Title ==
@@ -90,67 +92,227 @@ msgid "ConfigMaps and Secrets created from files named `application.properties`,
 msgstr "ConfigMapsとSecretsは、 `application.properties` 、 `application.yaml` 、または `application.yml` という名前のファイルから作成されます(作成方法の例は link:https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#create-configmaps-from-files[こちら] を参照してください)。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/kubernetes-config.adoc:45
-msgid "You have to explicitly enable the retrieval of ConfigMaps and Secrets by setting `quarkus.kubernetes-config.enabled=true`.  The default is `false` in order to make it easy to test the application locally."
-msgstr "ConfigMaps と Secrets の取得を明示的に有効にするには、 `quarkus.kubernetes-config.enabled=true` を設定する必要があります。デフォルトは `false` で、ローカルでのアプリケーションのテストを容易にするためです。"
+#: upstream/_versions/main/guides/kubernetes-config.adoc:44
+msgid "The extension is disabled by default in order to prevent the application for making API calls when it is not running in a Kubernetes environment. To enable it, set `quarkus.kubernetes-config.enabled=true` (for example using a specific xref:config-reference.adoc#profiles[profile])."
+msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/kubernetes-config.adoc:49
-msgid "Afterwards, set the `quarkus.kubernetes-config.config-maps` property to configure which ConfigMaps should be used.  Set the `quarkus.kubernetes-config.secrets` property to configure which Secrets should be used.  To access ConfigMaps and Secrets from a specific namespace, you can set the `quarkus.kubernetes-config.namespace` property."
+#: upstream/_versions/main/guides/kubernetes-config.adoc:47
+msgid "The values of `quarkus.kubernetes-config.config-maps` and `quarkus.kubernetes-config.secrets` determine which ConfigMaps and/or Secrets will be used as configuration sources. Keep in mind that these ConfigMaps and Secrets must be in the same Kubernetes `Namespace` as the running application. If they are to be found in a different namespace, then `quarkus.kubernetes-config.namespace` must be set to the proper value."
 msgstr ""
-"その後、 `quarkus.kubernetes-config.config-maps` プロパティーを設定して、どの ConfigMaps を使用するかを設定します。 `quarkus.kubernetes-config.secrets` プロパティーを設定して、どの Secrets を使用するかを設定します。特定の名前空間の\n"
-" ConfigMaps と Secrets にアクセスするには、 `quarkus.kubernetes-config.namespace` プロパティーを設定します。"
 
 #. type: Title ===
-#: upstream/_versions/main/guides/kubernetes-config.adoc:50
+#: upstream/_versions/main/guides/kubernetes-config.adoc:48
 #, no-wrap
 msgid "Priority of obtained properties"
 msgstr "取得したプロパティーの優先順位"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/kubernetes-config.adoc:53
+#: upstream/_versions/main/guides/kubernetes-config.adoc:51
 msgid "The properties obtained from the ConfigMaps and Secrets have a higher priority than (i.e. they override) any properties of the same name that are found in `application.properties` (or the YAML equivalents), but they have lower priority than properties set via Environment Variables or Java System Properties."
 msgstr "ConfigMapsとSecretsから取得したプロパティーは、 `application.properties` (またはYAMLの等価物)にある同名のプロパティーよりも高い優先度を持っています(すなわち、それらは上書きされます)が、環境変数やJavaシステムプロパティーを介して設定されたプロパティーよりも優先度は低くなります。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/kubernetes-config.adoc:55
+#: upstream/_versions/main/guides/kubernetes-config.adoc:53
 msgid "Furthermore, when multiple ConfigMaps (or Secrets) are used, ConfigMaps (or Secrets) defined later in the list have a higher priority that ConfigMaps defined earlier in the list."
 msgstr "さらに、複数のConfigMap(またはSecret)を使用している場合、後から定義されたConfigMap(またはSecret)は、先に定義されたConfigMap(またはSecret)よりも優先度が高くなります。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/kubernetes-config.adoc:57
+#: upstream/_versions/main/guides/kubernetes-config.adoc:55
 msgid "Finally, when both ConfigMaps and Secrets are used, the latter always a higher priority than the former."
 msgstr "最後に、ConfigMapsとSecretsの両方を使用する場合、常に後者の方が前者よりも優先度が高くなります。"
 
 #. type: Title ===
-#: upstream/_versions/main/guides/kubernetes-config.adoc:58
+#: upstream/_versions/main/guides/kubernetes-config.adoc:56
 #, no-wrap
 msgid "Kubernetes Permissions"
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/kubernetes-config.adoc:62
+#: upstream/_versions/main/guides/kubernetes-config.adoc:60
 msgid "Since reading ConfigMaps involves interacting with the Kubernetes API Server, when https://kubernetes.io/docs/reference/access-authn-authz/rbac/[RBAC] is enabled on the cluster, the https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/[ServiceAccount] that is used to run the application needs to have the proper permissions for such access."
 msgstr "ConfigMapsの読み込みにはKubernetes API Serverとのやりとりが含まれるため、クラスター上で link:https://kubernetes.io/docs/reference/access-authn-authz/rbac/[RBAC] が有効になっている場合、アプリケーションを実行するために使用される link:https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/[ServiceAccount] に適切なアクセス権限が必要になります。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/kubernetes-config.adoc:64
+#: upstream/_versions/main/guides/kubernetes-config.adoc:62
 msgid "Thankfully, when using the `kubernetes-config` extension along with the link:deploying-to-kubernetes[Kubernetes] extension, all the necessary Kubernetes resources to make that happen are automatically generated."
 msgstr "ありがたいことに、 link:deploying-to-kubernetes[Kubernetes] エクステンションと一緒に `kubernetes-config` エクステンションを使うと、それを実現するために必要なKubernetesリソースがすべて自動的に生成されます。"
 
 #. type: Title ====
-#: upstream/_versions/main/guides/kubernetes-config.adoc:65
+#: upstream/_versions/main/guides/kubernetes-config.adoc:63
 #, no-wrap
 msgid "Secrets"
 msgstr "Secrets"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/kubernetes-config.adoc:69
+#: upstream/_versions/main/guides/kubernetes-config.adoc:67
 msgid "By default, the link:deploying-to-kubernetes[Kubernetes] extension doesn't generate the necessary resources to allow accessing secrets.  Set `quarkus.kubernetes-config.secrets.enabled=true` to generate the necessary role and corresponding role binding."
 msgstr "デフォルトでは、 link:deploying-to-kubernetes[Kubernetes] エクステンションは秘密にアクセスできるようにするために必要なリソースを生成しません。 `quarkus.kubernetes-config.secrets.enabled=true` を設定して、必要なロールと対応するロールバインディングを生成します。"
 
 #. type: Title ==
-#: upstream/_versions/main/guides/kubernetes-config.adoc:70
+#: upstream/_versions/main/guides/kubernetes-config.adoc:68
+#, fuzzy, no-wrap
+#| msgid "Configuration"
+msgid "Example configuration"
+msgstr "設定"
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:71
+msgid "A very common use case is to deploy a Quarkus application that needs to access a relational database which has itself already been deployed on Kubernetes. Using the `quarkus-kubernetes-config` extension makes this use case very simple to handle."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:73
+msgid "Let's assume that our Quarkus application needs to talk to PostgreSQL and that when PostgreSQL was deployed on our Kubernetes cluster, a `Secret` named `postgresql` was created as part of that deployment and contains the following entries:"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:75
+msgid "`database-name`"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:76
+msgid "`database-user`"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:77
+msgid "`database-password`"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:79
+msgid "One possible way to make Quarkus use these entries to connect the database is to use the following configuration:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/kubernetes-config.adoc:84
+#, no-wrap
+msgid ""
+"%prod.quarkus.kubernetes-config.secrets.enabled=true                            <1>\n"
+"quarkus.kubernetes-config.secrets=postgresql                                    <2>\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/kubernetes-config.adoc:88
+#, no-wrap
+msgid ""
+"%prod.quarkus.datasource.jdbc.url=postgresql://somehost:5432/${database-name}   <3>\n"
+"%prod.quarkus.datasource.username=${database-user}                              <4>\n"
+"%prod.quarkus.datasource.password=${database-password}                          <5>\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:90
+msgid "Enable reading of secrets. Note the use of `%prod` profile as we only want this setting applied when the application is running in production."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:91
+msgid "Configure the name of the secret that will be used. This doesn't need to be prefixed with the `%prod` profile as it won't have any effect if secret reading is disabled."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:92
+msgid "Quarkus will substitute `${database-name}` with the value obtained from the entry with name `database-name` of the `postgres` Secret. `somehost` is the name of the Kubernetes `Service` that was created when PostgreSQL was deployed to Kubernetes."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:93
+msgid "Quarkus will substitute `${database-user}` with the value obtained from the entry with name `database-user` of the `postgres` Secret."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:94
+msgid "Quarkus will substitute `${database-password}` with the value obtained from the entry with name `database-password` of the `postgres` Secret."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:96
+msgid "The values above allow the application to be completely agnostic of the actual database configuration used in production while also not inhibiting the usability of the application at development time."
+msgstr ""
+
+#. type: Title ===
+#: upstream/_versions/main/guides/kubernetes-config.adoc:97
+#, no-wrap
+msgid "Alternatives"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:100
+msgid "The use of the `quarkus-kubernetes-config` extensions is completely optional as there are other ways an application can be configured to use ConfigMaps or Secrets."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:103
+msgid "One common alternative is to map each entry of the ConfigMap and / Secret to an environment variable on the Kubernetes `Deployment` - see link:https://kubernetes.io/docs/concepts/configuration/secret/#use-case-as-container-environment-variables[this] for more details.  To achieve that in Quarkus, we could use the `quarkus-kubernetes` extension (which is responsible for creating Kubernetes manifests and include the following configuration) and configure it as so:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/kubernetes-config.adoc:113
+#, no-wrap
+msgid ""
+"quarkus.kubernetes.env.secrets=postgresql\n"
+"quarkus.kubernetes.env.mapping.database-name.from-secret=postgresql\n"
+"quarkus.kubernetes.env.mapping.database-name.with-key=database-name\n"
+"quarkus.kubernetes.env.mapping.database-user.from-secret=postgresql\n"
+"quarkus.kubernetes.env.mapping.database-user.with-key=database-user\n"
+"quarkus.kubernetes.env.mapping.database-password.from-secret=postgresql\n"
+"quarkus.kubernetes.env.mapping.database-password.with-key=database-password\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/kubernetes-config.adoc:117
+#, no-wrap
+msgid ""
+"%prod.quarkus.datasource.jdbc.url=postgresql://somehost:5432/${database-name}\n"
+"%prod.quarkus.datasource.username=${database-user}\n"
+"%prod.quarkus.datasource.password=${database-password}\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:120
+msgid "The end result of the above configuration would be the following `env` part being applied the generated `Deployment`:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/kubernetes-config.adoc:139
+#, no-wrap
+msgid ""
+"          env:\n"
+"            - name: DATABASE_NAME\n"
+"              valueFrom:\n"
+"                secretKeyRef:\n"
+"                  key: database-name\n"
+"                  name: postgresql\n"
+"            - name: DATABASE_USER\n"
+"              valueFrom:\n"
+"                secretKeyRef:\n"
+"                  key: database-user\n"
+"                  name: postgresql\n"
+"            - name: DATABASE_PASSWORD\n"
+"              valueFrom:\n"
+"                secretKeyRef:\n"
+"                  key: database-password\n"
+"                  name: postgresql\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-config.adoc:142
+msgid "See xref:deploying-to-kubernetes.adoc#secret-mapping[this] for more details."
+msgstr ""
+
+#. type: Title ==
+#: upstream/_versions/main/guides/kubernetes-config.adoc:143
 #, no-wrap
 msgid "Configuration Reference"
 msgstr "設定リファレンス"
+
+#~ msgid "You have to explicitly enable the retrieval of ConfigMaps and Secrets by setting `quarkus.kubernetes-config.enabled=true`.  The default is `false` in order to make it easy to test the application locally."
+#~ msgstr "ConfigMaps と Secrets の取得を明示的に有効にするには、 `quarkus.kubernetes-config.enabled=true` を設定する必要があります。デフォルトは `false` で、ローカルでのアプリケーションのテストを容易にするためです。"
+
+#~ msgid "Afterwards, set the `quarkus.kubernetes-config.config-maps` property to configure which ConfigMaps should be used.  Set the `quarkus.kubernetes-config.secrets` property to configure which Secrets should be used.  To access ConfigMaps and Secrets from a specific namespace, you can set the `quarkus.kubernetes-config.namespace` property."
+#~ msgstr ""
+#~ "その後、 `quarkus.kubernetes-config.config-maps` プロパティーを設定して、どの ConfigMaps を使用するかを設定します。 `quarkus.kubernetes-config.secrets` プロパティーを設定して、どの Secrets を使用するかを設定します。特定の名前空間の\n"
+#~ " ConfigMaps と Secrets にアクセスするには、 `quarkus.kubernetes-config.namespace` プロパティーを設定します。"
