--- a/l10n/po/ja_JP/_versions/main/guides/azure-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/azure-functions-http.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-09-13 02:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -231,7 +231,9 @@ msgstr "エクステンションのmaven依存関係"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/azure-functions-http.adoc:105
-msgid "The sample project includes the RESTEasy, Undertow, Vert.x Web, link:funqy-http[Funqy HTTP] extensions.  If you are only using one of those APIs (i.e. jax-rs only), respectively remove the maven dependency `quarkus-resteasy`, `quarkus-undertow`, `quarkus-funqy-http`, and/or `quarkus-vertx-web`."
+#, fuzzy
+#| msgid "The sample project includes the RESTEasy, Undertow, Vert.x Web, link:funqy-http[Funqy HTTP] extensions.  If you are only using one of those APIs (i.e. jax-rs only), respectively remove the maven dependency `quarkus-resteasy`, `quarkus-undertow`, `quarkus-funqy-http`, and/or `quarkus-vertx-web`."
+msgid "The sample project includes the RESTEasy, Undertow, Vert.x Web, link:funqy-http[Funqy HTTP] extensions.  If you are only using one of those APIs (i.e. jax-rs only), respectively remove the maven dependency `quarkus-resteasy`, `quarkus-undertow`, `quarkus-funqy-http`, and/or `quarkus-reactive-routes`."
 msgstr "サンプルプロジェクトには、RESTEasy、Undertow、Vert.x Web、 link:funqy-http[Funqy HTTP] エクステンションが含まれています。これらのAPIの1つだけを使用している場合(つまりjax-rsのみ)は、`quarkus-resteasy` , `quarkus-undertow` , `quarkus-funqy-http` , , および/または `quarkus-vertx-web` などのそれぞれmavenの依存関係を削除してください "
 
 #. type: Plain text
